[package]
name = "rust-actixv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
